force-app-modified/main/default/objects/Co_Cruise_Members__c/fields/Account_Co__c.field-meta.xml
<CustomField>
    <fullName>Account_Co__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>לקוח</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>לקוחות משנה להפלגה</relationshipLabel>
    <relationshipName>Co_Cruise_Sailres</relationshipName>
    <type>Lookup</type>
</CustomField>