force-app-modified/main/default/objects/Co_Cruise_Members__c/fields/boat_name__c.field-meta.xml
<CustomField>
    <fullName>boat_name__c</fullName>
    <label>שם סירה</label>
    <length>25</length>
    <type>Text</type>
</CustomField>