force-app-modified/main/default/objects/Co_Cruise_Members__c/fields/CoCruiseGuidePhone__c.field-meta.xml
<CustomField>
    <fullName>CoCruiseGuidePhone__c</fullName>
    <formula>Cruise__r.Guide__r.Employee_Phone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>טלפון מדריך להפלגה</label>
    <type>Text</type>
</CustomField>