force-app-modified/main/default/objects/Co_Cruise_Members__c/fields/CountOfSCForMonth__c.field-meta.xml
<CustomField>
    <fullName>CountOfSCForMonth__c</fullName>
    <formula>noOfSCCountsForSelectedMonth__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CountOfSCForMonth</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>