force-app-modified/main/default/objects/Co_Cruise_Members__c/fields/Cruise_Points__c.field-meta.xml
<CustomField>
    <fullName>Cruise_Points__c</fullName>
    <label>שווי ניקוד הפלגה</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>