force-app-modified/main/default/objects/Co_Cruise_Members__c/fields/day__c.field-meta.xml
<CustomField>
    <fullName>day__c</fullName>
    <formula>DATEVALUE(Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>day</label>
    <type>Date</type>
</CustomField>