force-app-modified/main/default/objects/Co_Cruise_Members__c/fields/Duration_HHMM__c.field-meta.xml
<CustomField>
    <fullName>Duration_HHMM__c</fullName>
    <formula>Cruise__r.Duration_HHMM__c</formula>
    <label>Duration HHMM</label>
    <type>Text</type>
</CustomField>