force-app-modified/main/default/objects/Co_Cruise_Members__c/fields/End_Date_for_Calendar__c.field-meta.xml
<CustomField>
    <fullName>End_Date_for_Calendar__c</fullName>
    <formula>Cruise__r.End_Date_for_Calendar__c</formula>
    <label>End Date for Calendar</label>
    <type>Text</type>
</CustomField>