force-app-modified/main/default/objects/Co_Cruise_Members__c/fields/extra_client_email__c.field-meta.xml
<CustomField>
    <fullName>extra_client_email__c</fullName>
    <label>אי מייל לקוח משנה</label>
    <type>Email</type>
</CustomField>