force-app-modified/main/default/objects/Co_Cruise_Members__c/fields/is_canceled__c.field-meta.xml
<CustomField>
    <fullName>is_canceled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is canceled</label>
    <type>Checkbox</type>
</CustomField>