force-app-modified/main/default/objects/Co_Cruise_Members__c/fields/Is_deleted__c.field-meta.xml
<CustomField>
    <fullName>Is_deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is deleted</label>
    <type>Checkbox</type>
</CustomField>