force-app-modified/main/default/objects/Co_Cruise_Members__c/fields/Name_of_Boat__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Boat__c</fullName>
    <formula>Cruise__r.Boat__r.Name</formula>
    <label>Name of Boat</label>
    <type>Text</type>
</CustomField>