force-app-modified/main/default/objects/Co_Cruise_Members__c/fields/noOfSCCountsForSelectedMonth__c.field-meta.xml
<CustomField>
    <fullName>noOfSCCountsForSelectedMonth__c</fullName>
    <label>noOfSCCountsForSelectedMonth</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>