force-app-modified/main/default/objects/Co_Cruise_Members__c/fields/PaymentStatus__c.field-meta.xml
<CustomField>
    <fullName>PaymentStatus__c</fullName>
    <formula>IF(Transaction__r.Points_Balance__c &lt;0 , (IMAGE(&quot;/servlet/servlet.FileDownload?file=0150Y000002Iyn3&quot;, &quot;Red&quot; , 100, 100)),IMAGE(&quot;/servlet/servlet.FileDownload?file=0150Y000002Iymt&quot;, &quot;Green&quot;, 30, 30))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>סטטוס תשלום</label>
    <type>Text</type>
</CustomField>