force-app-modified/main/default/objects/Co_Cruise_Members__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <formula>Account_Co__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>טלפון</label>
    <type>Text</type>
</CustomField>