force-app-modified/main/default/objects/Co_Cruise_Members__c/fields/Reduced_Points__c.field-meta.xml
<CustomField>
    <fullName>Reduced_Points__c</fullName>
    <defaultValue>false</defaultValue>
    <label>הופחתו נקודות</label>
    <type>Checkbox</type>
</CustomField>