force-app-modified/main/default/objects/Co_Cruise_Members__c/fields/SailType__c.field-meta.xml
<CustomField>
    <fullName>SailType__c</fullName>
    <formula>Cruise__r.RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>סוג הפלגה</label>
    <type>Text</type>
</CustomField>