force-app-modified/main/default/objects/Co_Cruise_Members__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>TEXT(Cruise__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>סטטוס הפלגה</label>
    <type>Text</type>
</CustomField>