force-app-modified/main/default/objects/Co_Cruise_Members__c/fields/Transaction__c.field-meta.xml
<CustomField>
    <fullName>Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>עסקה</label>
    <referenceTo>Transaction__c</referenceTo>
    <relationshipLabel>לקוחות משנה להפלגה</relationshipLabel>
    <relationshipName>Co_Cruise_Members</relationshipName>
    <type>Lookup</type>
</CustomField>